# mcp-server-feishu

./: .gitignore  README.md  pyproject.toml
src/: feishu_client.py  server.py
